# leaders2024

./: .env.sample  .gitignore  README.md  docker-compose.yml
backend/: .env.sample  Dockerfile  docker-compose.yml  local.env  pyproject.toml  requirements.txt
backend/api/: app.py  auth.py  main.py  models.py  s3.py
backend/api/ml/: image_generator.py  llm.py
backend/api/routes/: clients.py  images.py  ml_models.py  recommendations.py
backend/api/services/: clients.py  images.py  ml_models.py  recommendations.py  users.py
backend/api/sql/: init.sql
frontend/: .eslintrc.json  .prettierrc.mjs  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: middleware.js
frontend/src/app/: actions.js  layout.jsx  not-found.jsx  page.jsx
frontend/src/app/admin/clients/: page.jsx
frontend/src/app/sign_in/: page.jsx
frontend/src/components/: clients.jsx  editor.jsx  features.jsx  generate-form.jsx  generate-panel.jsx  header.jsx  navbar.jsx  sign-in-form.jsx  theme-switcher.jsx  user-menu.jsx
frontend/src/components/ui/: button.jsx  card.jsx  dropdown-menu.jsx  form.jsx  input.jsx  label.jsx  navigation-menu-ssr.jsx  navigation-menu.jsx  password-input.jsx  resizable.jsx  slider.jsx  submit-button.jsx  textarea.jsx
frontend/src/lib/: api.js  auth.js  config.js  hooks.js  utils.js
ml/: Dockerfile  app.py  requirements.txt
ml/sd/: .gitignore  combine_images.ipynb  finetune.ipynb  main.ipynb
ml/sd/models/: gpb-lora.safetensors
promt-server/: pyproject.toml
promt-server/server/: db.py  main.py  models.py
(+3 files in other folders)
