[tool.poetry]
name = "lct-promt-server"
version = "0.1.0"
description = ""
authors = ["Gulyaev Nikolay <nikolay.gulyaev@raiffeisen.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.30"
pydrive = "^1.3.1"
torch = "^2.3.1"
transformers = "^4.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
